<resources>
    <string name="app_name">vaanda</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preconfig">Preconfig</string>
    <string name="place">Escriba el nombre</string>
    <string name="na">Nombre</string>
    <string name="hom">Varon-niño</string>
    <string name="muj">Mujer-niña</string>
    <string name="buts">Siguiente</string>
</resources>
