<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hogar.joaquinbarcena.vaanda.Preconfig"
    android:background="#ff3498db">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:padding="5dip"
        android:layout_marginTop="80dp"
        android:id="@+id/editText"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ronded"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/na"
        android:textSize="25dp"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/editText"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView">

        <RadioButton
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:text="@string/muj"
            android:textSize="20dp"
            android:id="@+id/radioButton"
            android:layout_below="@+id/editText"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:textColor="#ffffffff" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hom"
            android:textSize="20dp"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:textColor="#ffffffff" />

    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buts"
        android:id="@+id/button"
        android:background="@drawable/ronded"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="Siguiente" />


</RelativeLayout>
